prevent hover on mobile

--- a/app/assets/stylesheets/histories.scss
+++ b/app/assets/stylesheets/histories.scss
@@ -17,3 +17,7 @@ table tr:not(:last-child) {
 .nav.nav-tabs {
   margin-top: 30px;
 }
+
+.btn-default:hover .btn-default:active {
+  background-color: #e6e6e6;
+}
